Added opens that are needed for running tests on JDK 16.